[gd_scene load_steps=29 format=3 uid="uid://bbc16i4oqesmb"]

[ext_resource type="PackedScene" uid="uid://d4bqdrl61p7n1" path="res://assets/dungeon/characters/heroes/Knight.glb" id="1_lw6ox"]
[ext_resource type="Script" path="res://scripts/heroes/knight.gd" id="2_fhiwi"]
[ext_resource type="Script" path="res://scripts/shared/hurtbox.gd" id="3_4j8fn"]
[ext_resource type="PackedScene" uid="uid://d2ep8nb6bqfh6" path="res://scenes/health_component.tscn" id="3_fbl3p"]
[ext_resource type="Script" path="res://scripts/shared/hitbox.gd" id="3_ngmeb"]
[ext_resource type="Script" path="res://scripts/shared/health_component_display.gd" id="4_34l03"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kesft"]
height = 2.30753

[sub_resource type="BoxShape3D" id="BoxShape3D_6tjpr"]
size = Vector3(3, 2.80859, 2)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ohk1k"]
animation = &"Blocking"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_u4ate"]
animation = &"Death_A"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_oksap"]
animation = &"1H_Melee_Attack_Chop"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_wv6d6"]
filter_enabled = true
filters = ["Rig/Hurtbox", "Rig/Skeleton3D:chest", "Rig/Skeleton3D:elbowIK.l", "Rig/Skeleton3D:elbowIK.r", "Rig/Skeleton3D:hand.l", "Rig/Skeleton3D:hand.r", "Rig/Skeleton3D:handIK.l", "Rig/Skeleton3D:handIK.r", "Rig/Skeleton3D:handslot.l", "Rig/Skeleton3D:handslot.r", "Rig/Skeleton3D:lowerarm.l", "Rig/Skeleton3D:lowerarm.r", "Rig/Skeleton3D:upperarm.l", "Rig/Skeleton3D:upperarm.r"]
fadein_time = 0.2
fadeout_time = 0.2

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4l6ub"]
animation = &"2H_Melee_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7py51"]
animation = &"Jump_Full_Short"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_3ounb"]
filter_enabled = true
filters = ["", "Rig/Skeleton3D:IK-foot.l", "Rig/Skeleton3D:IK-foot.r", "Rig/Skeleton3D:chest", "Rig/Skeleton3D:control-foot-roll.l", "Rig/Skeleton3D:control-foot-roll.r", "Rig/Skeleton3D:control-heel-roll.l", "Rig/Skeleton3D:control-heel-roll.r", "Rig/Skeleton3D:control-toe-roll.l", "Rig/Skeleton3D:control-toe-roll.r", "Rig/Skeleton3D:elbowIK.l", "Rig/Skeleton3D:elbowIK.r", "Rig/Skeleton3D:foot.l", "Rig/Skeleton3D:foot.r", "Rig/Skeleton3D:handIK.l", "Rig/Skeleton3D:handIK.r", "Rig/Skeleton3D:head", "Rig/Skeleton3D:heelIK.l", "Rig/Skeleton3D:heelIK.r", "Rig/Skeleton3D:hips", "Rig/Skeleton3D:kneeIK.l", "Rig/Skeleton3D:kneeIK.r", "Rig/Skeleton3D:lowerleg.l", "Rig/Skeleton3D:lowerleg.r", "Rig/Skeleton3D:root", "Rig/Skeleton3D:spine", "Rig/Skeleton3D:toes.l", "Rig/Skeleton3D:toes.r", "Rig/Skeleton3D:upperleg.l", "Rig/Skeleton3D:upperleg.r"]
mix_mode = 1
fadein_time = 0.2

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vx5pv"]
animation = &"1H_Melee_Attack_Slice_Diagonal"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_ge7pu"]
filter_enabled = true
filters = ["Rig/Hurtbox", "Rig/Skeleton3D:chest", "Rig/Skeleton3D:elbowIK.l", "Rig/Skeleton3D:elbowIK.r", "Rig/Skeleton3D:hand.l", "Rig/Skeleton3D:hand.r", "Rig/Skeleton3D:handIK.l", "Rig/Skeleton3D:handIK.r", "Rig/Skeleton3D:handslot.l", "Rig/Skeleton3D:handslot.r", "Rig/Skeleton3D:lowerarm.l", "Rig/Skeleton3D:lowerarm.r", "Rig/Skeleton3D:upperarm.l", "Rig/Skeleton3D:upperarm.r"]
fadein_time = 0.2
fadeout_time = 0.2

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_fqns2"]
xfade_time = 0.25
input_0/name = "Idle"
input_0/auto_advance = false
input_0/break_loop_at_end = false
input_0/reset = true
input_1/name = "Run"
input_1/auto_advance = false
input_1/break_loop_at_end = false
input_1/reset = true
input_2/name = "Blocking"
input_2/auto_advance = false
input_2/break_loop_at_end = false
input_2/reset = true
input_3/name = "Die"
input_3/auto_advance = false
input_3/break_loop_at_end = false
input_3/reset = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ehytl"]
animation = &"Running_A"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_htgru"]
animation = &"Running_Strafe_Right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_14y6i"]
animation = &"Running_Strafe_Left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_25etb"]
animation = &"Walking_Backwards"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7kssr"]
animation = &"Walking_B"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_mhrwc"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ehytl")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_htgru")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_14y6i")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_25etb")
blend_point_3/pos = Vector2(0, -1)
blend_point_4/node = SubResource("AnimationNodeAnimation_7kssr")
blend_point_4/pos = Vector2(0, 0)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_qbti1"]
graph_offset = Vector2(-108.983, 218)
"nodes/Blocking Animation/node" = SubResource("AnimationNodeAnimation_ohk1k")
"nodes/Blocking Animation/position" = Vector2(260, 520)
nodes/Death/node = SubResource("AnimationNodeAnimation_u4ate")
nodes/Death/position = Vector2(320, 720)
"nodes/Heavy Attack Animation/node" = SubResource("AnimationNodeAnimation_oksap")
"nodes/Heavy Attack Animation/position" = Vector2(1180, 700)
nodes/HeavyAttack/node = SubResource("AnimationNodeOneShot_wv6d6")
nodes/HeavyAttack/position = Vector2(1500, 200)
"nodes/Idle Animation/node" = SubResource("AnimationNodeAnimation_4l6ub")
"nodes/Idle Animation/position" = Vector2(260, 80)
nodes/Jump/node = SubResource("AnimationNodeOneShot_3ounb")
nodes/Jump/position = Vector2(900, 220)
"nodes/Jump Animation/node" = SubResource("AnimationNodeAnimation_7py51")
"nodes/Jump Animation/position" = Vector2(660, 540)
"nodes/Light Attack Animation/node" = SubResource("AnimationNodeAnimation_vx5pv")
"nodes/Light Attack Animation/position" = Vector2(940, 540)
nodes/LightAttack/node = SubResource("AnimationNodeOneShot_ge7pu")
nodes/LightAttack/position = Vector2(1220, 200)
nodes/Movement/node = SubResource("AnimationNodeTransition_fqns2")
nodes/Movement/position = Vector2(640, 220)
"nodes/Running Animation/node" = SubResource("AnimationNodeBlendSpace2D_mhrwc")
"nodes/Running Animation/position" = Vector2(260, 280)
nodes/output/position = Vector2(1760, 200)
node_connections = [&"HeavyAttack", 0, &"LightAttack", &"HeavyAttack", 1, &"Heavy Attack Animation", &"Jump", 0, &"Movement", &"Jump", 1, &"Jump Animation", &"LightAttack", 0, &"Jump", &"LightAttack", 1, &"Light Attack Animation", &"Movement", 0, &"Idle Animation", &"Movement", 1, &"Running Animation", &"Movement", 2, &"Blocking Animation", &"Movement", 3, &"Death", &"output", 0, &"HeavyAttack"]

[sub_resource type="ViewportTexture" id="ViewportTexture_s8okp"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mof7o"]
blend_mode = 1
albedo_color = Color(0.290196, 0.552941, 0.403922, 0.411765)

[sub_resource type="SphereMesh" id="SphereMesh_srxs0"]

[node name="Knight" groups=["knight", "player"] instance=ExtResource("1_lw6ox")]
floor_constant_speed = true
floor_max_angle = 0.802851
script = ExtResource("2_fhiwi")

[node name="Collision" type="CollisionShape3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05517, 0)
shape = SubResource("CapsuleShape3D_kesft")

[node name="Hitbox" type="Area3D" parent="." index="1" node_paths=PackedStringArray("health_component")]
collision_layer = 4
collision_mask = 16
input_ray_pickable = false
monitoring = false
script = ExtResource("3_ngmeb")
health_component = NodePath("../HealthComponent")

[node name="CollisionBox" type="CollisionShape3D" parent="Hitbox" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0)
shape = SubResource("CapsuleShape3D_kesft")

[node name="Skeleton3D" parent="Rig" index="0"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
bones/0/rotation = Quaternion(-1.4323e-10, 0.00416225, 2.48082e-10, 0.999991)
bones/1/position = Vector3(1.05829e-17, 0.353512, 1.41205e-17)
bones/1/rotation = Quaternion(0.000793745, -5.56231e-05, -0.0005531, 1)
bones/2/rotation = Quaternion(-0.0420703, -0.00347091, -0.0415836, 0.998243)
bones/3/rotation = Quaternion(0.000486658, -0.00126029, 0.0425638, 0.999093)
bones/4/position = Vector3(0.211883, 0.133994, -0.000356522)
bones/4/rotation = Quaternion(-0.664938, 0.0817594, -0.488443, 0.559102)
bones/4/scale = Vector3(0.999999, 0.999999, 1)
bones/5/rotation = Quaternion(4.11306e-08, -4.89357e-08, -0.578972, 0.815347)
bones/6/rotation = Quaternion(-9.73784e-11, -2.98437e-10, 0.0266581, 0.999645)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(-0.343664, -0.117088, 0.0971342, 0.926688)
bones/8/position = Vector3(-6.08271e-09, 0.0961252, -0.0575)
bones/8/rotation = Quaternion(0.0942049, -0.0833316, -0.699795, 0.703185)
bones/8/scale = Vector3(1, 1, 1)
bones/14/position = Vector3(-0.211928, 0.134017, -0.000368603)
bones/14/rotation = Quaternion(-0.649984, 0.0859226, 0.590027, 0.471175)
bones/14/scale = Vector3(0.999999, 0.999999, 1)
bones/15/rotation = Quaternion(5.8197e-08, 5.1467e-08, 0.475, 0.879986)
bones/16/rotation = Quaternion(-9.73784e-11, 2.98437e-10, -0.0266581, 0.999645)
bones/16/scale = Vector3(1, 1, 1)
bones/17/rotation = Quaternion(-0.367979, 0.13721, -0.0593616, 0.917737)
bones/18/position = Vector3(-8.34829e-10, 0.0961251, -0.0575)
bones/18/rotation = Quaternion(0.100223, 0.059884, 0.699512, 0.705019)
bones/18/scale = Vector3(1, 1, 1)
bones/21/rotation = Quaternion(0.000931523, 0.000329687, 0.000507577, 0.999999)
bones/24/position = Vector3(0.170945, 0.113587, 0.0195938)
bones/24/rotation = Quaternion(0.944545, 7.85078e-05, 0.000104728, 0.328382)
bones/24/scale = Vector3(1, 1, 1)
bones/25/rotation = Quaternion(0.464718, 6.11686e-08, -3.21839e-07, 0.885459)
bones/26/rotation = Quaternion(-0.672815, -0.000376305, -0.000234274, 0.739811)
bones/27/rotation = Quaternion(-3.05187e-08, 0.920355, -0.391084, 6.94967e-08)
bones/27/scale = Vector3(1, 1, 1)
bones/28/position = Vector3(-0.170945, 0.113587, -0.0195938)
bones/28/rotation = Quaternion(0.999833, 0.000334017, 1.0186e-05, -0.0182951)
bones/28/scale = Vector3(1, 1, 1)
bones/29/rotation = Quaternion(0.700278, -4.93275e-08, 4.86456e-07, 0.713871)
bones/30/rotation = Quaternion(-0.679428, -9.73535e-06, -0.000235373, 0.733742)
bones/31/rotation = Quaternion(1.05443e-07, 0.803198, -0.595712, -1.10065e-07)
bones/31/scale = Vector3(1, 1, 1)
bones/32/position = Vector3(0.170945, 0.292969, 0.576471)
bones/32/rotation = Quaternion(0.707107, -2.29386e-07, -4.59714e-08, 0.707107)
bones/33/position = Vector3(0.170945, 0.144791, 0.405085)
bones/33/rotation = Quaternion(-0.836519, -5.29458e-08, -8.51514e-08, 0.547937)
bones/34/position = Vector3(4.55695e-09, 0.362833, -2.42861e-15)
bones/34/rotation = Quaternion(-1.15402e-10, -5.92255e-11, 1, -3.88068e-12)
bones/35/position = Vector3(-2.59309e-08, 0.213436, 1.02608e-08)
bones/35/rotation = Quaternion(-1.04082e-07, 0.391084, 0.920355, -2.94206e-08)
bones/36/position = Vector3(-6.19283e-09, 0.16565, 5.1694e-09)
bones/37/rotation = Quaternion(1, -1.15245e-10, 1.94713e-07, 1.48063e-11)
bones/39/position = Vector3(-0.170945, 0.292969, 0.576471)
bones/39/rotation = Quaternion(0.707107, -3.83223e-08, 1.45092e-07, 0.707107)
bones/40/position = Vector3(-0.170945, -0.0336688, -0.095203)
bones/40/rotation = Quaternion(-0.347166, -9.58808e-08, -3.22976e-08, 0.937804)
bones/41/position = Vector3(1.94581e-08, 0.362833, -7.39135e-09)
bones/41/rotation = Quaternion(5.76679e-11, -1.38299e-22, 1, 3.66198e-12)
bones/42/position = Vector3(-1.09113e-08, 0.213436, 5.49137e-09)
bones/42/rotation = Quaternion(-1.03995e-07, 0.391084, 0.920355, -2.95169e-08)
bones/43/position = Vector3(8.47144e-09, 0.16565, -2.27322e-08)
bones/43/rotation = Quaternion(-0.391084, -6.885e-08, -6.56287e-08, 0.920355)
bones/44/rotation = Quaternion(1, 1.32183e-11, 1.94732e-07, 2.57361e-18)
bones/46/position = Vector3(0.458551, 0.879774, -0.876586)
bones/46/rotation = Quaternion(-0.707106, -0.0009811, -0.000981099, 0.707106)
bones/47/position = Vector3(0.51104, 0.762424, -0.149537)
bones/47/rotation = Quaternion(0.729528, 0.0235612, 0.683217, 0.0211753)
bones/48/position = Vector3(-0.451557, 0.881363, -0.883152)
bones/48/rotation = Quaternion(-0.707106, -0.0009811, -0.000981099, 0.707106)
bones/49/position = Vector3(-0.499344, 0.746851, -0.0327619)
bones/49/rotation = Quaternion(0.674586, -0.0885364, -0.72714, 0.0914495)

[node name="1H_Sword_Offhand" parent="Rig/Skeleton3D" index="0"]
transform = Transform3D(-0.022381, 0.323937, 0.945813, 0.997852, 0.065489, 0.00118378, -0.0615567, 0.943809, -0.324707, 0.507922, 0.614472, -0.106027)

[node name="1H_Sword_Offhand" parent="Rig/Skeleton3D/1H_Sword_Offhand" index="0"]
visible = false

[node name="Badge_Shield" parent="Rig/Skeleton3D" index="1"]
transform = Transform3D(-0.0223808, 0.323937, 0.945813, 0.997852, 0.0654865, 0.00118446, -0.0615541, 0.943809, -0.324707, 0.65536, 0.614657, -0.156644)
visible = false

[node name="Rectangle_Shield" parent="Rig/Skeleton3D" index="2"]
transform = Transform3D(-0.0223808, 0.323937, 0.945813, 0.997852, 0.0654865, 0.00118446, -0.0615541, 0.943809, -0.324707, 0.65536, 0.614657, -0.156644)
visible = false

[node name="Round_Shield" parent="Rig/Skeleton3D" index="3"]
transform = Transform3D(-0.0223808, 0.323937, 0.945813, 0.997852, 0.0654865, 0.00118446, -0.0615541, 0.943809, -0.324707, 0.65536, 0.614657, -0.156644)
visible = false

[node name="Spike_Shield" parent="Rig/Skeleton3D" index="4"]
transform = Transform3D(-0.0223808, 0.323937, 0.945813, 0.997852, 0.0654865, 0.00118446, -0.0615541, 0.943809, -0.324707, 0.65536, 0.614657, -0.156644)

[node name="1H_Sword" parent="Rig/Skeleton3D" index="5"]
transform = Transform3D(0.0372249, -0.148791, 0.988167, 0.969902, 0.243493, 0.000125709, -0.24063, 0.958421, 0.153377, -0.491762, 0.613429, 0.0555069)

[node name="2H_Sword" parent="Rig/Skeleton3D" index="6"]
transform = Transform3D(0.0372249, -0.148791, 0.988167, 0.969902, 0.243493, 0.000125723, -0.24063, 0.958421, 0.153377, -0.491762, 0.613429, 0.0555069)
visible = false

[node name="Knight_Helmet" parent="Rig/Skeleton3D" index="7"]
transform = Transform3D(0.999993, -0.00232706, 0.00295092, 0.00208359, 0.996794, 0.0799825, -0.00312758, -0.0799758, 0.996792, 0.0313202, 1.16031, -0.0507079)

[node name="Knight_Cape" parent="Rig/Skeleton3D" index="8"]
transform = Transform3D(0.999996, -0.00131679, 0.00228816, 0.00112512, 0.996645, 0.0818384, -0.00238824, -0.0818356, 0.996643, 0.0312939, 1.16031, -0.0506605)

[node name="Hurtbox" type="Area3D" parent="Rig" index="1"]
collision_layer = 4
collision_mask = 16
input_ray_pickable = false
monitorable = false
script = ExtResource("3_4j8fn")
always_enabled = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rig/Hurtbox" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4043, -1.5)
shape = SubResource("BoxShape3D_6tjpr")

[node name="AnimationTree" type="AnimationTree" parent="." index="4"]
tree_root = SubResource("AnimationNodeBlendTree_qbti1")
anim_player = NodePath("../AnimationPlayer")
parameters/HeavyAttack/active = false
parameters/HeavyAttack/internal_active = false
parameters/HeavyAttack/request = 0
parameters/Jump/active = false
parameters/Jump/internal_active = false
parameters/Jump/request = 0
parameters/LightAttack/active = false
parameters/LightAttack/internal_active = false
parameters/LightAttack/request = 0
parameters/Movement/current_state = "Run"
parameters/Movement/transition_request = ""
parameters/Movement/current_index = 1
"parameters/Running Animation/blend_position" = Vector2(-0.00794911, 0)

[node name="CameraPoint" type="Node3D" parent="." index="5"]
transform = Transform3D(0.707107, 0.353553, -0.612373, 0, 0.866026, 0.5, 0.707107, -0.353553, 0.612373, -15.3156, 13.5, 15.3093)

[node name="HealthComponent" type="Node" parent="." index="6"]
script = ExtResource("4_34l03")
health = 100.0

[node name="HealthbarPosition" type="Node3D" parent="." index="7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.3, 0)

[node name="HealthComponent" parent="HealthbarPosition" index="0" node_paths=PackedStringArray("health_component") instance=ExtResource("3_fbl3p")]
texture = SubResource("ViewportTexture_s8okp")
health_component = NodePath("../../HealthComponent")

[node name="MeshInstance3D" type="MeshInstance3D" parent="." index="8"]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, -0.0444464, 1.20289, -0.0147383)
visible = false
material_override = SubResource("StandardMaterial3D_mof7o")
mesh = SubResource("SphereMesh_srxs0")

[connection signal="area_entered" from="Rig/Hurtbox" to="." method="_on_hurtbox_area_entered"]
